--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-streamlit
+streamlit>=1.29
 opencv-python-headless==4.8.1.78
 mediapipe==0.10.9
-numpy
+numpy==1.24.4
 scikit-learn
 
+
 pandas
+
 
