--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-streamlit>=1.29
-opencv-python-headless==4.8.1.78
+streamlit==1.53.0
 mediapipe==0.10.9
 numpy==1.24.4
-scikit-learn
-
-
-pandas
-
-
+pillow==12.1.0
+scikit-learn==1.7.2
