--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.53.0
-mediapipe==0.10.9
-numpy==1.24.4
-pillow==12.1.0
-scikit-learn==1.7.2
+streamlit
+opencv-python
+mediapipe
+numpy
+scikit-learn
+pandas
